...
    var lastCheck: SafetyCheck? {
        safetyChecks.sorted(by: { $0.timestamp > $1.timestamp }).first
    }
    
    var body: some View {
        VStack(spacing: 50) {
            Text("安全签到")
                .font(.largeTitle.bold())
                .padding(.top)
            
            VStack(spacing: 15) {
                Text("下次签到还剩")
                    .font(.headline)
...
